WIP A LOT OF SHIT IS GOING ON

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
                 "trace": true
             },
             "args": [
-                "${workspaceFolder}/rom/tetris.gb"
+                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb"
             ],
             "visualizerFile": "${workspaceFolder}/my.natvis",
             "showDisplayString": true,
