more shit that doesnt work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,15 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
 
 project(gbmu)
 
-add_executable(gbmu)
+add_library(gbmu_lib)
+add_executable(gbmu srcs/main.c)
 
 include(FetchContent)
 
 option(WITH_LIBYACC "Build libyacc" OFF)
 option(WITH_ASAN "Build with memory sanitizer" OFF)
 option(DEBUG_COLORS "Enable debug palette" ON)
+option(WITH_TESTS "Build tests" ON)
 
 FetchContent_Declare(
         SDL2
@@ -58,9 +60,9 @@ if (NOT WIN32)
 	add_compile_definitions(USE_READLINE_STATIC=1)
 	add_compile_definitions(READLINE_LIBRARY=1)
 	find_package(Readline REQUIRED)
-	target_include_directories(gbmu PRIVATE ${Readline_INCLUDE_DIR})
-	target_link_libraries(gbmu ${Readline_LIBRARY})
-	target_include_directories(gbmu PUBLIC ${Readline_INCLUDE_DIR})
+	target_include_directories(gbmu_lib PRIVATE ${Readline_INCLUDE_DIR})
+	target_link_libraries(gbmu_lib ${Readline_LIBRARY})
+	target_include_directories(gbmu_lib PUBLIC ${Readline_INCLUDE_DIR})
 endif()
 
 ################################################
@@ -69,7 +71,6 @@ endif()
 
 # Core
 set(SOURCES
-	srcs/main.c
 	srcs/debug.c
 	srcs/debugger.c
 	srcs/execute.c
@@ -175,6 +176,7 @@ list(APPEND HEADERS
 	srcs/renderer/sprites.h
 	srcs/renderer/rescale.h
 	srcs/renderer/gl_utils/compile_program.h
+	srcs/renderer/gl_utils/glerr.h
 	srcs/renderer/wrapper_c/wrapper.h)
 
 set(SHADERS
@@ -450,8 +452,8 @@ set(DEBUGGER_SOURCES
 	includes/debugger/Commands/Continue.hpp
 	)
 
-target_include_directories(gbmu PRIVATE srcs)
-target_include_directories(gbmu PRIVATE includes)
+target_include_directories(gbmu_lib PUBLIC srcs)
+target_include_directories(gbmu_lib PUBLIC includes)
 	
 ################################################
 #                COMPILE FLAGS                 #
@@ -483,7 +485,7 @@ if (WITH_ASAN)
 endif()
 
 if (DEBUG_COLORS)
-	target_compile_definitions(gbmu PRIVATE DEBUG_COLORS)
+	target_compile_definitions(gbmu_lib PRIVATE DEBUG_COLORS)
 endif()
 
 
@@ -492,28 +494,28 @@ endif()
 ################################################
 
 if (WITH_LIBYACC)
-	target_sources(gbmu PRIVATE ${GENERATED_LIBYACC_SOURCES} ${DEBUGGER_SOURCES})
+	target_sources(gbmu_lib PRIVATE ${GENERATED_LIBYACC_SOURCES} ${DEBUGGER_SOURCES})
 	FILE(GLOB GENERATED_LIBYACC_SOURCES srcs/debugger/*.cpp)
 	FILE(GLOB GENERATED_LIBYACC_SOURCES srcs/debugger/Commands/*.cpp)
-	target_compile_definitions(gbmu PUBLIC WITH_LIBYACC)
-	target_include_directories(gbmu PRIVATE includes/debugger)
-	target_include_directories(gbmu PRIVATE includes/debugger/Commands)
+	target_compile_definitions(gbmu_lib PUBLIC WITH_LIBYACC)
+	target_include_directories(gbmu_lib PRIVATE includes/debugger)
+	target_include_directories(gbmu_lib PRIVATE includes/debugger/Commands)
 	include_directories(libyacc/includes)
 endif()
 
-target_sources(gbmu PRIVATE ${SOURCES})
+target_sources(gbmu_lib PRIVATE ${SOURCES})
 
-target_link_libraries(gbmu SDL2main)
-target_link_libraries(gbmu SDL2-static)
-target_link_libraries(gbmu ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(gbmu ${OPENGL_LIBRARIES})
-target_link_libraries(gbmu libglew_static)
+target_link_libraries(gbmu_lib SDL2main)
+target_link_libraries(gbmu_lib SDL2-static)
+target_link_libraries(gbmu_lib ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(gbmu_lib ${OPENGL_LIBRARIES})
+target_link_libraries(gbmu_lib libglew_static)
 
 if (WIN32)
-	target_link_libraries(gbmu edit_static)
+	target_link_libraries(gbmu_lib edit_static)
 endif()
 
-# target_include_directories(gbmu ${SDL2_INCLUDE_DIRS})
+# target_include_directories(gbmu_lib ${SDL2_INCLUDE_DIRS})
 
 ################################################
 #                   INSTALL                    #
@@ -534,9 +536,15 @@ foreach(shader ${SHADERS})
 	# 	COMMENT "Copying shader ${filename} to ${CMAKE_CURRENT_BINARY_DIR}/shaders/"
 	# 	SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${shader}
 	# )
-	# add_dependencies(gbmu gbmu_shader_${filename})
+	# add_dependencies(gbmu_lib gbmu_shader_${filename})
 endforeach()
 
+target_link_libraries(gbmu gbmu_lib)
 add_custom_target(gbmu_shaders ALL DEPENDS ${GENERATED_SHADERS})
 
-add_dependencies(gbmu gbmu_shaders)
+add_dependencies(gbmu_lib gbmu_shaders)
+
+if (WITH_TESTS)
+	enable_testing()
+	add_subdirectory(tests)
+endif()
