--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,9 @@
                 "trace": true
             },
             "args": [
-                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb"
+                // "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb"
+                // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb"
+                "${workspaceFolder}/rom/unit_tests/dmg-acid2.gb"
             ],
             "visualizerFile": "${workspaceFolder}/my.natvis",
             "showDisplayString": true,
