--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,11 @@
             "type": "cppdbg",
             "request": "launch",
             // Resolved by CMake Tools:
-            "program": "${workspaceFolder}/build/gbmu",
+            "program": "${command:cmake.launchTargetPath}",
             "args": [
-                "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb"
+                // "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb"
                 // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb"
+                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb"
                 // "~/Downloads/dmg-acid2.gb"
             ],
             "stopAtEntry": false,
