Wip overall fixes and shit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,8 +51,16 @@
                 "trace": true
             },
             "args": [
-                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb"
-                // "${workspaceFolder}/rom/F-1_Race_World.gb"
+                // "C:/Users/nicor/Downloads/testroms/daid/ppu_scanline_bgp.gb",
+                // "C:/Users/nicor/Downloads/testroms/ax6/rtc3test-1.gb",
+                "C:/Users/nicor/Downloads/testroms/mooneye/emulator-only/mbc2/bits_ramg.gb",
+                // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
+                // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
+                // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
+                // "${workspaceFolder}/rom/unit_tests/dmg-acid2.gb",
+                // "${workspaceFolder}/rom/mario.gbc",
+            //    "${workspaceFolder}/rom/F-1_Race_World.gb",
+                "--mode", "dmg"
             ],
             "visualizerFile": "${workspaceFolder}/my.natvis",
             "showDisplayString": true,
