Fix various execution flow issues (interrupts & memory locks). Not sure about this but seems to run better on some games.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,11 @@
             "args": [
                 // "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb",
                 // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
-                // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
+                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
                 // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc"
                 // "${workspaceFolder}/rom/batman.gb",
                 // "${workspaceFolder}/rom/F-1_Race_World.gb",
-                "~/Downloads/dmg-acid2.gb",
+                // "~/Downloads/dmg-acid2.gb",
 
                 "--mode", "dmg"
             ],
