More CGB tweaks

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,10 @@
             "program": "${command:cmake.launchTargetPath}",
             "args": [
                 // "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb",
-                "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
+                // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
                 // "${workspaceFolder}/rom/Kirby_2.gb",
                 // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
-                // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
+                "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
                 // "${workspaceFolder}/rom/batman.gb",
                 // "${workspaceFolder}/rom/F-1_Race_World.gb",
                 // "~/Downloads/dmg-acid2.gb",
@@ -54,14 +54,15 @@
             "args": [
                 // "C:/Users/nicor/Downloads/testroms/daid/ppu_scanline_bgp.gb",
                 // "C:/Users/nicor/Downloads/testroms/ax6/rtc3test-1.gb",
-                "C:/Users/nicor/Downloads/testroms/mooneye/emulator-only/mbc2/bits_ramg.gb",
+                // "C:/Users/nicor/Downloads/testroms/mooneye/emulator-only/mbc2/bits_ramg.gb",
                 // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
                 // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
                 // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
                 // "${workspaceFolder}/rom/unit_tests/dmg-acid2.gb",
+                "C:/Users/nicor/Downloads/GBEmulatorShootout-main/testroms/mooneye/emulator-only/mbc5/rom_4MB.gb",
                 // "${workspaceFolder}/rom/mario.gbc",
             //    "${workspaceFolder}/rom/F-1_Race_World.gb",
-                "--mode", "dmg"
+                "--mode", "auto"
             ],
             "visualizerFile": "${workspaceFolder}/my.natvis",
             "showDisplayString": true,
