Fix more shit and implement HDMA transfer

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,9 +57,11 @@
                 // "C:/Users/nicor/Downloads/testroms/mooneye/emulator-only/mbc2/bits_ramg.gb",
                 // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
                 // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
+                "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb",
                 // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
+                // "${workspaceFolder}/rom/unit_tests/acid/cgb-acid2.gbc",
                 // "${workspaceFolder}/rom/unit_tests/dmg-acid2.gb",
-                "C:/Users/nicor/Downloads/GBEmulatorShootout-main/testroms/mooneye/emulator-only/mbc5/rom_2MB.gb",
+                // "C:/Users/nicor/Downloads/GBEmulatorShootout-main/testroms/mooneye/emulator-only/mbc5/rom_2MB.gb",
                 // "${workspaceFolder}/rom/mario.gbc",
             //    "${workspaceFolder}/rom/F-1_Race_World.gb",
                 "--mode", "auto"
