--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 option(WITH_LIBYACC "Build libyacc" OFF)
 option(WITH_ASAN "Build with memory sanitizer" OFF)
 option(DEBUG_COLORS "Enable debug palette" ON)
-option(WITH_TESTS "Build tests" ON)
+option(WITH_TESTS "Build tests" OFF)
 
 FetchContent_Declare(
       SDL2
@@ -461,10 +461,10 @@ set(CMAKE_CXX_STANDARD 17)
 if (MSVC)
 	set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS}         ")
 	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ")
-	set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   /DEBUG")
+	set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   /Wall /DEBUG")
 	set(CMAKE_C_FLAGS           "${CMAKE_C_FLAGS}           ")
 	set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE}   ")
-	set(CMAKE_C_FLAGS_DEBUG     "${CMAKE_C_FLAGS_DEBUG}     /DEBUG")
+	set(CMAKE_C_FLAGS_DEBUG     "${CMAKE_C_FLAGS_DEBUG}     /Wall /DEBUG")
 else()
 	# set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS}         -Wall -Wextra")
 	# set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g -Werror")
@@ -475,10 +475,10 @@ else()
 endif()
 
 
-if (dsad)
-	target_link_options(gbmu_lib PUBLIC "/fsanitize=address")
+if (WITH_ASAN)
+	target_link_options(gbmu_lib PUBLIC "-fsanitize=address")
 	# target_link_options(gbmu_lib PUBLIC "/MD")
-	target_compile_options(gbmu_lib PUBLIC "/fsanitize=address")
+	target_compile_options(gbmu_lib PUBLIC "-fsanitize=address")
 endif()
 
 if (DEBUG_COLORS)
