--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: mattnotmitt/doxygen-action@v1
         with:
-          doxyfile-path: "./doc/Doxyfile"
-          working-directory: "."
+          doxyfile-path: "./Doxyfile"
+          working-directory: "./doc"
 
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: "./html"
+          publish_dir: "./doc/html"
