--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,13 +57,14 @@
                 // "C:/Users/nicor/Downloads/testroms/mooneye/emulator-only/mbc2/bits_ramg.gb",
                 // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
                 // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
+                "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Ages.gbc",
                 // "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb",
                 // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
                 // "${workspaceFolder}/rom/Legend of Zelda, The - Link's Awakening DX.gbc",
                 // "${workspaceFolder}/rom/unit_tests/acid/cgb-acid2.gbc",
                 // "${workspaceFolder}/rom/unit_tests/dmg-acid2.gb",
                 // "${workspaceFolder}/rom/Pokemon_jaune.gb",
-                "C:/Users/nicor/Downloads/roms/Super Mario Land 2.gb",
+                // "C:/Users/nicor/Downloads/roms/Super Mario Land 2.gb",
                 // "C:/Users/nicor/Downloads/GBEmulatorShootout-main/testroms/mooneye/emulator-only/mbc5/rom_2MB.gb",
                 // "${workspaceFolder}/rom/mario.gbc",
                 // "C:/Users/nicor/Downloads/roms (1)/roms/Pokemon - Version Argent.gbc",
