--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/c,cmake,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=c,cmake,visualstudiocode
 
@@ -103,3 +102,4 @@ doc/latex
 # Added by cargo
 
 /target
+.cache
