POC loop reimplementation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
                 // "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb",
                 // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
                 // "${workspaceFolder}/rom/Kirby_2.gb",
-                // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
-                "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
+                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
+                // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
                 // "${workspaceFolder}/rom/batman.gb",
                 // "${workspaceFolder}/rom/F-1_Race_World.gb",
                 // "~/Downloads/dmg-acid2.gb",
@@ -55,9 +55,9 @@
                 // "C:/Users/nicor/Downloads/testroms/daid/ppu_scanline_bgp.gb",
                 // "C:/Users/nicor/Downloads/testroms/ax6/rtc3test-1.gb",
                 // "C:/Users/nicor/Downloads/testroms/mooneye/emulator-only/mbc2/bits_ramg.gb",
-                // "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
+                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb",
                 // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Seasons.gbc",
-                "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Ages.gbc",
+                // "${workspaceFolder}/rom/Legend of Zelda, The - Oracle of Ages.gbc",
                 // "${workspaceFolder}/rom/unit_tests/individual/02-interrupts.gb",
                 // "${workspaceFolder}/rom/unit_tests/cpu_instrs.gb",
                 // "${workspaceFolder}/rom/Legend of Zelda, The - Link's Awakening DX.gbc",
